test/compile-fail/identifier/use-as-path-segment-keyword/expected.txt
error: could not parse ./test/compile-fail/identifier/use-as-path-segment-keyword/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/identifier/use-as-path-segment-keyword/top.rhdl:2:10
  │
2 │ use a as r#self;
  │          ^^^^^^ expected any of ["NonKeywordIdentifier", "RawIdentifier"]

